--- a/ch1/package.json
+++ b/ch1/package.json
@@ -14,5 +14,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "openai": "^6.8.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16"
   }
 }
