--- a/ch1/React-gpt/gpt-chat-client/package.json
+++ b/ch1/React-gpt/gpt-chat-client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "openai": "^6.8.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^19.1.1",
